# exploring-qt

./: .devenv.flake.nix  .gitignore  README.md  flake.nix  highlight.cpp  list.qml  list2.qml  shell.nix  test.cpp
01_gui/: Makefile
03_qml/: blop.qml  rectangle.qml
ZZ_notes/: howto_run_qt_creator_on_nix.txt
ai/: DraggableItem.qml  dragdrop2.qml  dragdrop3.qml  gemini.cpp  gemini.pro
animtest/: animtest.cpp  animtest.pro  opacity.cpp  rectangles.cpp
anotherone/: CMakeCache.txt  CMakeLists.txt  main.cpp
empty/: empty.cpp  empty.pro
gradients/: Makefile  gradients.cpp
gui-testing/: Makefile  claude.cpp  gui-testing.pro  spinbox.cpp
kdab/: Makefile  rectangle.pro
models/: Makefile  claude.cpp  claude2.cpp  models.cpp  models.pro
nothing/: Makefile  main.cpp
nothing2/: Makefile  nothing2.cpp  nothing2.pro
qdebug/: Makefile  qdebug.cpp
qml/: CMakeLists.txt  blop.qml  charts.qml  dragdrop.qml  graphs.qml  list.qml  main.qml  qml.pro  repeater.qml  rowlayout.qml
qml/aba/: Main.qml  RectWithText.qml
qml/ext/: gradient.qml
qml/particles/: GlowingPot.qml  Main.qml
qml/qt.io/: PetsModel.qml  list.qml  table.qml
qml/remains/: main.qml
qml/remains/broken/: treeview.qml  whatthehellclaude.qml
splitter/: splitter.cpp  splitter.pro
tabs/: Makefile  tabs.cpp  tabs.pro
testing/: Makefile  testing.pro
tree_view_with_menu/: claude.cpp  main.cpp  tree_view_with_menu.pro
without-widgets/: Makefile  README.md  without-widgets.pro.old  wwid.cpp
zerokara/: Makefile  dumb_chrono.cpp  dumb_ideas.h  dumb_stdlib_linux.h  on_compile_times.txt  (+9 more)
(+47 files in other folders)
